--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -28442,15 +28442,15 @@ ul.benifits-col li i {
 .breadcrumb-bar-two {
   background: #F2F6F6;
   background-repeat: no-repeat;
-  padding-top: 70px;
-  min-height: 300px;
+  padding-top: 24px;
+  min-height: 100px;
   position: relative;
   overflow: hidden;
   z-index: 1;
 }
 .breadcrumb-bar-two .inner-banner {
   margin: 0;
-  padding: 70px 0;
+  padding: 70px 0 10px;
 }
 .breadcrumb-bar-two .inner-banner .breadcrumb-title {
   font-weight: 600;
